--- a/index.html
+++ b/index.html
@@ -52,16 +52,22 @@
       let hours = now.getHours();
       let minutes = now.getMinutes();
       let seconds = now.getSeconds();
-      // Add leading zeros if necessary
-      if(hours > 0){
-				hours += 4
-        minutes += 30
-   		}else if(hours > 19 && minutes <30){
-      hours -=19
-      minutes -=30 
+      
+      if(hours>0){
+      hours+=4
+      minutes+=30
       }
-      minutes =((minutes + (hours * 60 ))%90) 
-      hours = Math.trunc((minutes + (hours * 60 ))/90)
+      if(hours>19 && minutes>30 ){
+      hours-=19 
+      minutes-=30
+      }
+			      // Add leading zeros if necessary
+			console.log(((hours*60)+minutes)/90)
+      console.log(minutes)
+      let temp = minutes
+      minutes =(minutes + (hours * 60))%90
+      console.log(minutes)
+      hours = Math.trunc(((hours*60)+temp)/90)
     
       //let temp = Math.trunc((minutes + (hours * 60 ))/96)
    		hours= (hours < 10) ? '0' + hours : hours;
