--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       let minutes = now.getMinutes();
       let seconds = now.getSeconds();
       
-      if(hours===0){
+      if(hours>=0){
       hours+=4
       minutes+=30
       }
-      if(hours===19 && minutes===30 ){
+      if(hours>=19 && minutes>=30 ){
       hours-=19 
       minutes-=30
       }
